# vet-dose-calc-gui

./: .gitignore  README.md  pyproject.toml
data/: gui_config.yaml
tests/: conftest.py  test_gui_formatter.py  test_prescription_calc.py  test_settings.py
vet_dose_calc_gui/: __init__.py  app.py  gui_formatter.py  prescription_calc.py
vet_dose_calc_gui/pages/: calc_page.py  manage_forms.py  manage_page.py  suggest_page.py
vet_dose_calc_gui/views/: calc_page.py  manage_page.py  suggest_page.py
